objects/Integration_Status__c.object
<CustomObject>
    <fields>
        <fullName>File_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC File ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+File_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Integration Status</relationshipLabel>
        <relationshipName>Integration_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processing Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Integration Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>File_Name__c</columns>
        <columns>File_URL__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>